fix(ui): better scrolling on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,6 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   background-color: #373a4d;
   touch-action: none;
 }
